# ship

./: .gitignore  CMakeLists.txt  deploy.sh  main.cpp  sourcefilereader.cpp  sourcefilereader.h  Оптимизация.pptx  Отчёт.docx
input/: Ship1b.txt
input/1/: Ship1.txt  Ship2.txt  Ship3 — копия.txt  Ship3.txt  Ship4.txt  Ship5.txt  Ship6.txt  Ship7.txt  Ship8.txt  Ship9.txt  Ship_test_path.txt
input/2/: Ship1.txt  Ship1a.txt  Ship1f.txt  Ship4.txt  Ship6.txt
input/2f/: Ship1.txt  Ship2.txt  Ship3.txt  Ship5.txt  Ship7.txt  Ship8.txt  Ship9.txt  closeTest.txt  nop2.txt  pathCount1.txt  pathCount2.txt  waiting0test.txt
input/my/: Ship_test_bad_trac.txt  Ship_test_path.txt  bad_trac_size.txt  output.txt
input/simple/: 1.txt  10.txt  100.txt  1000.txt  1001.txt  2.txt  20.txt  200.txt  3.txt  30.txt  300.txt  40.txt  400.txt  5.txt  50.txt  500.txt  600.txt  700.txt  800.txt  900.txt  _10.txt  _s10.txt  _s10_2.txt  _s10big.txt  _s10r.txt  _s64.txt  _s64_stops.txt  s100.txt  s1000.txt  s500.txt
input/simple.m/: 1 — копия.txt  1000.txt  40.txt  50.txt  70.txt  8.txt  8ships.txt
input/speedup/: 10000.txt
input/test_brute_force/: 1.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt
input/test_brute_force/simple/: 2s.txt  4.txt  6.txt  test.txt
input/vas/: 2.txt  3.txt  no path.txt  to create.txt
input/масштаб/: 1.txt  100.txt  1000.txt  10000.txt  100000.txt  5.txt  50.txt
other/: debugcatcher.cpp  debugcatcher.h
pathwalk/: algoannealing — копия.cpp  algoannealing.cpp  algoannealing.h  algobruteforce.cpp  algobruteforce.h  algodummy.cpp  algodummy.h  movestopathconverter.cpp  movestopathconverter.h  mtsfinder.cpp  mtsfinder.h  patherrordetector.cpp  patherrordetector.h  prepareddata.cpp  prepareddata.h  sortviacrowding.cpp  sortviacrowding.h  worker.cpp  worker.h
reader/: rawdata.cpp  rawdata.h  sourceerrordetector.cpp  sourceerrordetector.h  sourcefilereader.cpp  sourcefilereader.h
reports/: Task_1.docx  Task_2.docx  ~$Task_1.docx  Задание 1.docx
resources/: data.qrc  rcIco.rc
viewer/: graphicsitemzoomer.cpp  graphicsitemzoomer.h  graphicsviewzoomer.cpp  graphicsviewzoomer.h  ignoredndgraphicsview.cpp  ignoredndgraphicsview.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  placeholderframe.cpp  placeholderframe.h  simulationscene.cpp  simulationscene.h  waitingframe.cpp  waitingframe.h
viewer/graphicsitems/: distancemodificator.h  graphicsiteminterface.h  shipgraphicsitem.cpp  shipgraphicsitem.h  tracgraphicsitem.cpp  tracgraphicsitem.h
